# type-info-python

./: .travis.yml  README.md  pyproject.toml
.github/workflows/: testing.yml
tests/: test_api.py  test_builtins_container.py  test_collections_abc_container.py  test_collections_container.py  test_core.py  test_special.py  utils.py
type_info/: __init__.py  _core.py  _py36_impl.py  _py37_impl.py
